[tool.poetry]
name = "blood-donation"
version = "0.1.0"
description = ""
authors = ["Eduardo Lira <eduardolirainfo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
tinydb = "^4.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
